Change version to v0.12.0.
I expect to keep it more or less in sync with the PGXN::API version numbers.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
 Revision history for Perl extension WWW-PGXN.
 
-0.10  
-      - Initial version.
+0.12.0  
+      - Initial public release on CPAN.
