--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for Perl extension WWW-PGXN.
       - Updated URI::Template to v0.16 for its support for `{+var}` and
         dropped the nasty hack required to work around the lack of it in
         earlier versions.
+      - Fixed test failure on Perl 5.17 due to hash order randomization.
 
 0.12.2  2011-08-10T17:25:27
       - Require URI::Template 0.15.
