--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Perl extension WWW-PGXN.
 
 0.12.4
-
+      - Removed the Pod tests from the distribution.
 
 0.12.3  2012-11-28T01:09:09Z
       - Updated URI::Template to v0.16 for its support for `{+var}` and
