--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension WWW-PGXN.
 
+0.14.0
+      - Tweaked the Pod for the submodule (Distribution, User, Tag, etc.).
+      - Fixed outdated GitHub links and removed the rt.cpan.org bug reporting
+        address.
+
 0.13.0  2024-02-17T22:23:29Z
       - Added CI tests for Perls 5.10 - 5.38 on Linux, macOS, and Windows.
       - Fixed test failures caused by line endings on Windows (probably only
